Added configuration option for recording data size statistics. Fixed reporting of it, so it is included with each iteration's report

--- a/src/SQLQueryStress/SQLQueryStress.csproj
+++ b/src/SQLQueryStress/SQLQueryStress.csproj
@@ -15,6 +15,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <CodeAnalysisRules></CodeAnalysisRules>
